# songs.travisbriggs.com

./: .env.example  .gitignore  .netlify  .pre-commit-config.yaml  Pipfile  README.md  astro.config.mjs  id3.sh  keystatic.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  restore.py  sc_download.py  sitebuilder.py  track_length.py
.githooks/: pre-push
.github/workflows/: deploy.yml
.netlify/: state.json
docs/design-reference/: Song Detail.dc.html
integrations/: cover-admin.mjs
public/peaks/: afternoon-delight.json  aggro.json  alarm.json  already-dead.json  are-you-ready-now.json  ashes-and-dust.json  baby-come-over-here.json  beautiful-thing.json  (+80 more)
scripts/: add-song.mjs  check-assets.mjs  cover-svg.mjs  cover-svg.test.mjs  covers.mjs  fal-cover.mjs  gen-covers.mjs  gen-tags.mjs  migrate.mjs  parse-frontmatter.mjs  parse-frontmatter.test.mjs  peaks.mjs  peaks.test.mjs  r2.mjs  recalc-durations.mjs  tag-tool.mjs
songs/: #grasshopper.md#  abort-the-revolution.md  afternoon-delight.md  aggro.md  alarm.md  already-dead.md  anna.md  are-you-ready-now.md  ashes-and-dust.md  at-least-ive-tried.md  baby-come-over-here.md  beautiful-thing.md  bedroom-song.md  beep-yeah.md  bit-bop-three-1.md  bitbopthreefourths.md  blockso.md  blockso.md~  boredom.md  break-some-shit.md  breves-dies-hominis-house-mix.md  bubbles.md  ca-layers.md  cant-stop.md  chp-1907.md  city.md  coffee.md  cold-and-cruel.md  collector.md  control-shift.md  cradle.md  cross-rhyme.md  crossing-mkii.md  crossing.md  crt-7100.md  cube-box.md  curious-metaphor.md  dandy-2.md  dandy.md  danger.md  (+133 more)
src/: content.config.ts  env.d.ts
templates/: base.html  index.html  player.html  song.html  song_block.html
(+294 files in other folders)
