[tool.poetry]
name = "songs.travisbriggs.com"
version = "0.1.0"
description = "Flask, Frozen-Flask and Flask-Flatpages static generator that deals with mp3 files"
authors = ["Travis Briggs <audiodude@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-flatpages = "^0.7.2"
frozen-flask = "^1.0.2"
urllib3 = "^1.26.5"
mutagen = "^1.46.0"
eyed3 = "^0.9.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
